# mte-django

./: .flakeheaven_baseline  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.fleet/: run.json
diagrams/: Diag.drawio
docs/: how_to.md
mte_website/: manage.py
mte_website/accueil/: urls.py  views.py
mte_website/accueil/templates/accueil/: index.html
mte_website/annuaire/: admin.py  apps.py  models.py  urls.py  views.py
mte_website/annuaire/migrations/: 0001_initial.py  0002_alter_structure_description.py
mte_website/annuaire/templates/annuaire/: index.html
mte_website/blog/: urls.py  views.py
mte_website/mte_website/: asgi.py  settings.py  urls.py  wsgi.py
mte_website/mte_website/templatetags/: mte_website_extras.py
mte_website/polls/: models.py  urls.py  views.py
mte_website/polls/migrations/: 0001_initial.py
mte_website/polls/templates/polls/: detail.html  index.html
mte_website/static/css/accueil/: index.css
mte_website/templates/: base.html
