[tool.poetry]
name = "mte-django"
version = "0.1.0"
description = "mathese emoi website in django"
authors = ["Thomas <guntho.neo@gmail.com>"]
license = "MIT License"
readme = "README.md"
#packages = [{include = "mte_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-stubs = "^1.15.0"
mypy = "^1.0.1"
wemake-python-styleguide = "^0.17.0"
flakeheaven = "^3.2.1"
autoflake = "1.7.8"
autopep8 = "1.6.0"
docformatter = "1.5.1"
unify = "0.5"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
format = "grouped"
baseline = ".flakeheaven_baseline"
show_source = true
statistics = false
doctests = true
enable_extensions = "G"

accept_encodings = "utf-8"
max_complexity = 6
max_line_length = 80

ignore = "D100, D104, D401, W504, RST303, RST304, DAR103, DAR203"

[tool.flakeheaven.plugins]
"flake8-*" = ["+*"]
mccabe = ["+*"]
"pep8-naming" = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
"wemake-python-styleguide" = ["+*"]
